# bim

./: Cargo.toml  Cross.toml  README.md  README_en.md
.github/workflows/: build.yml  build_release.yml  release.yml
src/: client.rs  lib.rs  librespeed_org.rs  main.rs  models.rs  requests.rs  server.rs  speedtest.rs  task.rs  utils.rs  windows.rs
src/clients/: librespeed_org.rs  mod.rs  requests.rs  speedtest_net.rs  utils.rs
