[package]
name = "bim"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde_json = "1"
async-stream = "0.3"
bytes = "1"
trust-dns-resolver = "0.21"
machine-uid = "0.2"
base64 = "0.13"
log = "0.4"
env_logger = "0.9"
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
